Finish Challenge 01 Rockeseat

--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "type": "module",
   "version": "1.0.0",
   "description": "Desfio 01 da Rocketseat",
-  "main": "server.js",
+  "main": "src/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node --watch src/server.js",
     "start": "node server.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "csv-parse": "^5.5.6"
+  }
 }
